Make sure the accept button doesn't jump on hover

--- a/src/onegov.town/onegov/town/theme/styles/town.scss
+++ b/src/onegov.town/onegov/town/theme/styles/town.scss
@@ -447,7 +447,7 @@ input[type=color] {
 
     a:before {
         font-family: 'FontAwesome';
-        margin-right: .4em;
+        margin-right: .6em;
     }
 
     .new-page:before {
